Update layout to fix horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@
     --main-color: #0ef;
 }
 
-html {
+html,
+body {
+    width: 100%;
     font-size: 62.5%;
     overflow-x: hidden;
 }
